--- a/app/src/main/res/layout/element_product_details.xml
+++ b/app/src/main/res/layout/element_product_details.xml
@@ -2,42 +2,49 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorTlo"
     >
 
     <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="model"
-        android:textSize="25dp"
-        android:textStyle="bold" />
-
-    <TextView
         android:id="@+id/author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="149dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="178dp"
+        android:layout_marginBottom="60dp"
         android:text="marka"
         android:textSize="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/title" />
-
-    <TextView
-        android:id="@+id/category"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/author"
-        android:text="kategoria"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="99 zł"
-        android:textColor="@color/colorPrice"
+        android:layout_marginStart="331dp"
+        android:layout_marginTop="88dp"
+        android:text="34566 $"
+        android:textColor="@color/colorPrimary"
         android:textSize="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/category" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/CartButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="AddToCart"
+        tools:layout_editor_absoluteX="3dp"
+        tools:layout_editor_absoluteY="62dp" />
 
 </android.support.constraint.ConstraintLayout>
