--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -3,6 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/sort_button"
+        android:title="Item" />
+    <item
         android:id="@+id/miHome"
         android:icon="@drawable/homek"
         android:title="Home"
@@ -37,6 +40,12 @@
         android:title="Log In"
         app:showAsAction="never"
         android:visible="true" />
+    <item
+        android:id="@+id/cat_button"
+        android:title="Item" />
+    <item
+        android:id="@+id/filter_button"
+        android:title="Item" />
 
 
 </menu>
