--- a/app/src/main/res/layout/activity_products_list.xml
+++ b/app/src/main/res/layout/activity_products_list.xml
@@ -24,28 +24,32 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/filter" />
+            android:text="@string/filter"
+            android:visibility="invisible" />
 
         <Button
             android:id="@+id/sort_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/sort" />
+            android:text="@string/sort"
+            android:visibility="invisible" />
 
         <Button
             android:id="@+id/CartButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Cart" />
+            android:text="Cart"
+            android:visibility="invisible" />
 
         <Button
             android:id="@+id/cat_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="cts" />
+            android:text="cts"
+            android:visibility="invisible" />
 
         <ImageButton
             android:id="@+id/change_view_button"
