--- a/app/src/main/res/layout/activity_buttons.xml
+++ b/app/src/main/res/layout/activity_buttons.xml
@@ -100,32 +100,32 @@
         android:layout_width="145dp"
         android:layout_height="59dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="364dp"
+        android:layout_marginTop="62dp"
         android:background="@color/colorBtn"
         android:onClick="showCategory"
         android:text="Wyszukiwanie"
         android:textColor="@color/vpi__background_holo_dark"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
     <Button
         android:id="@+id/productlistbtn"
         android:layout_width="156dp"
-        android:layout_height="56dp"
-        android:layout_marginTop="364dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="61dp"
         android:layout_marginEnd="16dp"
         android:background="@color/colorBtn"
         android:onClick="showProductList"
         android:text="Lista produktów"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView6" />
 
     <Button
         android:id="@+id/basic_list_btn"
-        android:layout_width="146dp"
+        android:layout_width="145dp"
         android:layout_height="56dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="14dp"
         android:background="@color/colorBtn"
         android:onClick="showFavourites"
         android:text="Ulubione"
@@ -134,10 +134,10 @@
 
     <Button
         android:id="@+id/button7"
-        android:layout_width="159dp"
+        android:layout_width="156dp"
         android:layout_height="56dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="12dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="16dp"
         android:background="@color/colorBtn"
         android:onClick="showGridList"
         android:text="Grid"
